initial commit, added basic js file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="restaurantApp">
 <head>
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Grocery App</title>
+
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script type="text/javascript" src="lib/jquery.js"></script>
+    <script type="text/javascript" src="lib/Popper.js"></script>
+    <script type="text/javascript" src="lib/bootstrap.js"></script>
+    <script type="text/javascript" src="lib/angular.min.js"></script>
+    <script type="text/javascript" src="lib/angular-route.js"></script>
+    <script type="text/javascript" src="lib/underscore-min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+
 </head>
 <body>
+
+
+
+
+
+
+
 
 </body>
 </html>
