aditional bootdstrap files

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <ul class="list-group">
             <li class="list-group-item text-center clearfix">
                 <ordered-item></ordered-item>
+                <ordered-item></ordered-item>
+                <ordered-item></ordered-item>
+                <ordered-item></ordered-item>
+                <ordered-item></ordered-item>
+
             </li>
         </ul>
     </div>
@@ -53,5 +58,8 @@
         </div>
     </div>
 
+    <main-course-selector></main-course-selector>
+    <addition-selector></addition-selector>
+    <drink-selector></drink-selector>
 </body>
 </html>
