--- a/elements/orderedItem.html
+++ b/elements/orderedItem.html
@@ -1,6 +1,6 @@
 <div class="row h4 align-items-center">
     <div class="col-sm-1">
-        <button class="btn btn-block btn-sm  btm-success">
+        <button class="btn btn-block btn-sm  btn-warning">
             <span class="glyphicon glyphicon glyphicon-remove"></span>
         </button>
     </div>
@@ -14,7 +14,7 @@
         <span>{{orderedItem.drink}}</span>
     </div>
     <div class="col-sm-1">
-        <button class="btn btn-block btn-sm btm-warning">
+        <button class="btn btn-block btn-sm btn-danger">
             <span class="glyphicon glyphicon glyphicon glyphicon-pencil"></span>
         </button>
     </div>
