--- a/index.html
+++ b/index.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="restaurantApp">
+<html lang="en" ng-app="chatApp">
 <head>
-
     <meta charset="UTF-8">
-    <title>Fake Restaurant App</title>
+    <title>{{appTitle}}</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/appStyles.css">
     <script type="text/javascript" src="lib/jquery.js"></script>
     <script type="text/javascript" src="lib/Popper.js"></script>
+    <script type="text/javascript" src="lib/tether.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-route.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="lib/underscore-min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+
 
 </head>
-<body ng-controller="mainAppController">
+<body ng-view="">
 
-    <nav class="navbar navbar-dark">
-        <a class="navbar-brand" href="#">
-            <span class="glyphicon glyphicon glyphicon-cutlery"></span>
-            <span class="h3 font-weight-bold"> {{appTitle}} </span>
-        </a>
-    </nav>
 
-    <div class="container" ng-view>
 
-    </div>
 </body>
 </html>
