--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script type="text/javascript" src="lib/angular-route.js"></script>
     <script type="text/javascript" src="lib/underscore-min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/controllers.js"></script>
+    <script type="text/javascript" src="js/services.js"></script>
 
 </head>
 <body ng-view="">
